@@ -1,0 +1,6 @@
+void bar (void);
+
+void bar ()
+{
+  return;
+}
